--- a/src/plugin/css/mobileReset.css
+++ b/src/plugin/css/mobileReset.css
@@ -90,6 +90,7 @@ input {
     /* font-size: 100%; */
     font-weight: normal;
     vertical-align: baseline;
+    font-family: Source Han Sans CN;
 }
 
 
