--- a/src/styles/mobileHelpDetail.less
+++ b/src/styles/mobileHelpDetail.less
@@ -41,7 +41,7 @@
       }
       img {
         height: 0.59rem;
-        margin-bottom: 0.14rem;
+        margin-top: 0.14rem;
         display: inline-block;
       }
       // 重置侧边栏禁止点击状态
