--- a/src/plugin/css/mobileCommon.css
+++ b/src/plugin/css/mobileCommon.css
@@ -2,8 +2,30 @@
     display: none;
 }
 
-.login {
+.header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+}
+
+.pc {
     display: none;
+}
+
+.login {
+    width: 1.35rem;
+    height: 0.44rem;
+    line-height: 0.44rem;
+    border: 1px solid #fff;
+    border-radius: 2px;
+    color: #fff;
+    font-family: SourceHanSansCN-Regular;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    right: 0.2rem;
+    margin-top: -0.22rem;
 }
 
 .pcLogo {
@@ -23,11 +45,11 @@
     margin-top: 0.14rem;
 }
 
-button {
+.logo button {
     width: 0.44rem;
     height: 0.3rem;
     position: absolute;
-    right: 0.38rem;
+    left: 0.38rem;
     top: 50%;
     margin-top: -0.15rem;
     background: url("../../images/tab.png") no-repeat;
@@ -36,21 +58,21 @@ button {
     outline: none;
 }
 
-.logo ul {
+.logo .pc {
     display: none;
     width: 2rem;
     position: absolute;
-    right: 0;
+    left: 0;
     top: 0.90rem;
 }
 
-.logo ul li {
+.logo .pc li {
     height: 0.5rem;
     background-color: rgba(42, 133, 113, 1);
     line-height: 0.3rem;
 }
 
-.logo ul li a {
+.logo .pc li a {
     color: #fff;
     display: block;
     padding: 0.1rem 0;
@@ -58,8 +80,71 @@ button {
     height: 100%;
 }
 
-.logo ul li a:active {
+.logo .pc li a:active {
     background-color: black;
     opacity: 0.5;
     text-decoration: none;
+}
+
+.navSub {
+    width: 100%;
+    height: 100%
+}
+
+.tabLan {
+    display: none;
+    text-align: left;
+    width: 30%;
+    background-color: rgba(118, 195, 182);
+}
+
+.navSub .subNav {
+    border-bottom: solid 1px #e5e3da;
+    padding: .13rem;
+    cursor: pointer;
+    font-size: .16rem;
+    font-family: Source Han Sans CN;
+    font-weight: 400;
+    color: #333;
+    background: url(../../images/youjiantou.png) no-repeat;
+    background-position: 6% 50%;
+    text-indent: 2em
+}
+
+.navSub .subNav:hover {
+    color: #2a8571;
+    border-left: 4px solid #2a8571
+}
+
+.navSub .subNav:hover.currentDd {
+    color: #fff;
+    border-left: 0
+}
+
+.navSub .currentDd {
+    background-color: #2a8571;
+    color: #fff
+}
+
+.navSub .currentDt {
+    background-image: url(../../images/jiantouxia.png)
+}
+
+.navSub .navContent {
+    display: none;
+    padding: .05rem;
+    border-bottom: solid 1px #e5e3da
+}
+
+.navSub .navContent li a {
+    display: block;
+    padding: .15rem;
+    text-align: left;
+    padding-left: .4rem;
+    font-size: .14rem;
+    color: #333
+}
+
+.navSub .navContent li.currentDd a {
+    color: #fff
 }
