--- a/src/styles/mobileIndex.less
+++ b/src/styles/mobileIndex.less
@@ -3,10 +3,13 @@
 .wailian-extend {
   display: none;
 }
-.header {
-  position: fixed;
-  width: 100%;
-  z-index: 999;
+
+.carousel-inner>.item>a>img, .carousel-inner>.item>img {
+  line-height: 1;
+  height: 3.85rem;
+}
+.third{
+  display:none;
 }
 .mobile {
   height: 0.64rem;
@@ -19,11 +22,7 @@
   line-height: 0.64rem;
 }
 .banner {
-  padding-top: 0.88rem;
-  width: 100%;
-  height: 4.73rem;
-  background: url("../images/swiperbanner.png");
-  background-size: 100% 100%;
+ padding-top: 0.88rem;
   .coustomer {
     display: none;
   }
@@ -579,9 +578,9 @@
 .mis-slider li img {
   /*  Make max-width of image a little less than width of slide
                 to avoid some browser shinking bugs */
-  max-width: 270px;
+  // max-width: 270px;
   /*  for really small screens make width 100% */
-  width: 100%;
+  width:80%;
   /*  Make image round */
   /* border-radius: 135px; */
   border: none;
@@ -592,7 +591,7 @@
                 for multi-item slider, default width is 100%
                 for single-item slider. Use padding to add space 
                 between slides */
-  width: 2.5rem;
+  width: 33.3%;
   height: 3.6rem;
   padding: 0.4rem;
   /*  Undo the margin added by slider element */
