--- a/src/styles/mobileHelpDetail.less
+++ b/src/styles/mobileHelpDetail.less
@@ -30,7 +30,7 @@
         }
         
       }
-      .tabLan {
+      .tabSide {
         display: none;
         text-align: left;
         width: 30%;
