--- a/src/styles/mobileMylibary.less
+++ b/src/styles/mobileMylibary.less
@@ -9,8 +9,8 @@ body {
     cursor: pointer;
 
     p {
-      margin: 25px 0;
-      font-size: 14px;
+      margin: 0.25rem 0;
+      font-size: 0.14rem;
       font-family: Source Han Sans CN;
       font-weight: 300;
       color: rgba(170, 170, 170, 1);
@@ -19,15 +19,15 @@ body {
 
   .main-user {
     background: rgba(255, 255, 255, 1);
-    box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
+
     border-radius: 4px;
-    padding: 21px 41px;
-    margin-bottom: 18px;
+    padding: 0.21rem 0.41rem;
+    margin-bottom: 0.18rem;
 
     .profile {
-      padding: 10px 0 33px;
+      padding: 0.1rem 0 0.33rem;
       span {
-        font-size: 34px;
+        font-size: 0.3rem;
         font-family: Source Han Sans CN;
         font-weight: 400;
         color: rgba(51, 51, 51, 1);
@@ -36,17 +36,17 @@ body {
         }
 
         &.updata {
-          font-size: 14px;
+          font-size: 0.14rem;
           font-family: PingFang SC;
           font-weight: 400;
-          margin-left: 10px;
+          margin-left: 0.1rem;
           display: none;
           a {
             color: rgba(42, 133, 113, 1);
             display: inline-block;
-            width: 75px;
-            height: 32px;
-            line-height: 32px;
+            width: 0.75rem;
+            height: 0.32rem;
+            line-height: 0.32rem;
             text-align: center;
             border: 1px solid rgba(42, 133, 113, 1);
             border-radius: 4px;
@@ -57,19 +57,19 @@ body {
 
     div {
       .profile-left {
-        padding: 10px;
+        padding: 0.1rem;
         float: none;
         background: rgba(255, 255, 255, 1);
         box-shadow: 0px 0px 11px 1px rgba(204, 204, 204, 0.5);
         border-radius: 6px;
         p {
-          font-size: 36px;
+          font-size: 0.36rem;
           font-family: Source Han Sans CN;
           font-weight: 400;
           color: rgba(51, 51, 51, 1);
-          padding: 20px 10px;
+          padding: 0.2rem 0.1rem;
           &:nth-child(2) {
-            font-size: 25px;
+            font-size: 0.25rem;
             font-family: Source Han Sans CN;
             font-weight: 300;
             color: rgba(153, 153, 153, 1);
@@ -77,38 +77,38 @@ body {
         }
 
         .touxiang {
-          width: 124px;
-          height: 125px;
+          width: 1.24rem;
+          height: 1.25rem;
           border-radius: 50%;
           background-color: skyblue;
-          margin-right: 20px;
+          margin-right: 0.2rem;
         }
         ul {
-          margin-top: 18px;
+          margin-top: 0.18rem;
         }
         ul > li {
-          margin-top: 20px;
-          font-size: 29px;
+          margin-top: 0.2rem;
+          font-size: 0.29rem;
           font-family: Source Han Sans CN;
           font-weight: 400;
           color: rgba(51, 51, 51, 1);
 
           span {
-            font-size: 25px;
+            font-size: 0.25rem;
             font-family: PingFang SC;
             font-weight: 400;
             color: rgba(153, 153, 153, 1);
-            margin-right: 10px;
+            margin-right: 0.1rem;
           }
           i {
             font-style: normal;
-            font-size: 29px;
+            font-size: 0.28rem;
             font-family: Source Han Sans CN;
             font-weight: 400;
             color: rgba(254, 0, 0, 1);
           }
           img {
-            margin-left: 5px;
+            margin-left: 0.05rem;
           }
         }
       }
@@ -120,11 +120,11 @@ body {
       ul {
         li {
           float: left;
-          padding: 34px 0 21px 0;
+          padding: 0.34 0 0.21rem 0;
           margin-right: 2%;
-          margin-top: 30px;
+          margin-top: 0.3rem;
           width: 32%;
-          height: 300px;
+          height: 3rem;
           background: rgba(247, 249, 249, 1);
           border-radius: 4px;
           text-align: center;
@@ -133,31 +133,31 @@ body {
             margin-right: 0;
           }
           div {
-            font-size: 18px;
+            font-size: 0.18rem;
             font-family: PingFang SC;
             font-weight: bold;
             color: #999999;
 
             span {
-              font-size: 24px;
+              font-size: 0.24rem;
               font-family: PingFang SC;
               font-weight: bold;
               color: rgba(51, 51, 51, 1);
-              margin-right: 5px;
+              margin-right: 0.05rem;
             }
           }
 
           .messageicon {
-            margin-top: 30px;
-            margin-bottom: 33px;
+            margin-top: 0.3rem;
+            margin-bottom: 0.33rem;
             img {
-              width: 63px;
+              width: 0.63rem;
             }
           }
 
           p {
-            margin-top: 33px;
-            font-size: 24px;
+            margin-top: 0.33rem;
+            font-size: 0.24rem;
             font-family: Source Han Sans CN;
             font-weight: 400;
             color: rgba(51, 51, 51, 1);
@@ -166,8 +166,8 @@ body {
 
           .more {
             position: absolute;
-            top: 10px;
-            right: 12px;
+            top: 0.1rem;
+            right: 0.12rem;
           }
         }
       }
@@ -178,12 +178,12 @@ body {
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
     border-radius: 4px;
-    margin-bottom: 19px;
+    margin-bottom: 0.19rem;
 
     ul > li {
       float: left;
       width: 25%;
-      height: 150px;
+      height: 1.5rem;
 
       text-align: center;
 
@@ -199,16 +199,19 @@ body {
 
       .serve-center {
         height: 100%;
-        padding-top: 22px;
+        padding-top: 0.22rem;
 
         a {
           height: 100%;
           display: block;
+          img {
+            width: 0.7rem;
+          }
         }
 
         p {
-          margin-top: 13px;
-          font-size: 24px;
+          margin-top: 0.13rem;
+          font-size: 0.24rem;
           font-family: Source Han Sans CN;
           font-weight: 400;
           color: rgba(51, 51, 51, 1);
@@ -218,120 +221,71 @@ body {
   }
 
   .main-table {
-    padding: 18px 38px;
+    padding: 0.18rem 0.38rem;
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
     border-radius: 4px;
 
     .table-head {
-      font-size: 22px;
+      font-size: 0.22rem;
       font-family: Source Han Sans CN;
       font-weight: 400;
       color: rgba(51, 51, 51, 1);
-      margin-bottom: 19px;
+      margin-bottom: 0.19rem;
 
       img {
         vertical-align: middle;
-        margin-right: 10px;
+        margin-right: 0.1rem;
       }
     }
 
     .table {
       table {
         border-collapse: collapse;
+        display: none;
       }
 
-      .detail_tb {
-        width: 100%;
-      }
-
-      .detail_tb .fied_header {
-        line-height: 54px;
-        border-left: none;
-        height: 54px;
-        background: rgba(42, 133, 113, 1);
-      }
-
-      .detail_tb .fied_header th {
-        text-align: center;
-        font-size: 16px;
-        font-family: Source Han Sans CN;
-        font-weight: 400;
-        color: rgba(255, 255, 255, 1);
-
-        &:nth-child(1) {
-          text-align: unset;
-        }
-      }
-
-      .detail_tb .fied_header th input {
-        vertical-align: middle;
-        margin: 12px 5px 0 10px;
-        vertical-align: unset;
-        background: rgba(255, 255, 255, 1);
-        border: 1px solid rgba(138, 197, 184, 1);
-        border-radius: 2px;
-      }
-
-      .detail_tb tr {
-        height: 44px;
-        line-height: 44px;
-        border-left: none;
+      .mobileBooks {
         display: block;
-        margin-top: 4px;
-        background-color: rgba(247, 249, 249, 1);
-
-        &.now {
-          height: 70px;
-          line-height: 70px;
-          background-color: rgba(239, 245, 244, 1);
+        li{
+          margin-bottom:0.1rem;
         }
-      }
-
-      .detail_tb tr td {
-        text-align: center;
-        font-size: 14px;
-        font-family: Source Han Sans CN;
-        font-weight: 300;
-        color: rgba(51, 51, 51, 1);
-
+        h3 {
+          font-size: 0.28rem;
+          font-family: Source Han Sans CN;
+          font-weight: 400;
+          color: rgba(51, 51, 51, 1);
+        }
+        p {
+          font-size: 0.24rem;
+          font-family: Source Han Sans CN;
+          font-weight: 300;
+          color: rgba(153, 153, 153, 1);
+          margin-top:0.1rem;
+        }
         button {
-          width: 58px;
-          height: 30px;
+          padding: 0.15rem 0.20rem;
           background: rgba(255, 255, 255, 1);
           border: 1px solid rgba(42, 133, 113, 1);
           border-radius: 4px;
-          font-size: 14px;
+          font-size: 0.26rempx;
           font-family: Source Han Sans CN;
           font-weight: 400;
           color: rgba(42, 133, 113, 1);
-          text-align: center;
-          line-height: 30px;
         }
-      }
-
-      .detail_tb tr td input {
-        float: left;
-        margin: 12px 5px 0 10px;
-        background: rgba(255, 255, 255, 1);
-        border: 1px solid rgba(138, 197, 184, 1);
-        border-radius: 2px;
-      }
-
-      .detail_tb tr td span {
-        float: left;
       }
     }
   }
 
   .data-display {
-    margin-top: 19px;
-    padding: 30px;
+    margin-top: 0.19rem;
+    // padding: 0.30rem;
+    width: 100%;
     .data-left {
       .data-top {
         border-bottom: 4px solid #f4f7fb;
       }
-      #bookNum{
+      #bookNum {
         width: 100%;
         height: 250px;
       }
@@ -340,23 +294,23 @@ body {
     .data-left,
     .data-right {
       box-shadow: 0px 2px 9px 1px rgba(204, 204, 204, 0.5);
-      margin-bottom: 30px;
+      margin-bottom: 0.3rem;
       width: 100%;
-      height: 335px;
+
       box-shadow: 0px 2px 9px 1px rgba(204, 204, 204, 0.5);
       background-color: #f7f9f9;
     }
 
     .data-top {
-      font-size: 22px;
+      font-size: 0.22rem;
       font-family: Source Han Sans CN;
       font-weight: 400;
       color: rgba(51, 51, 51, 1);
-      padding: 13px 42px;
+      padding: 0.13rem 0.42rem;
       border-bottom: 4px solid #f4f7fb;
 
       span {
-        font-size: 20px;
+        font-size: 0.2rem;
         font-family: Source Han Sans CN;
         font-weight: 400;
         color: rgba(199, 207, 224, 1);
@@ -365,76 +319,83 @@ body {
 
       img {
         vertical-align: middle;
-        margin-right: 10px;
+        margin-right: 0.1rem;
       }
     }
 
     .data-right {
-        #timeNum{
-            width: 100%;
-            height: 250px;
-          }
+      #timeNum {
+        width: 100%;
+        height: 250px;
+      }
     }
   }
 
   .book-display {
-    margin-top: 19px;
-    margin-bottom: 76px;
-    padding: 30px;
+    margin-top: 0.19rem;
+    margin-bottom: 0.76rem;
+    padding: 0.3rem;
     .book-left,
     .book-right {
-        float:none;
-      height: 501px;
+      float: none;
+      height: 5.01rem;
       background: rgba(255, 255, 255, 1);
       box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
       border-radius: 4px;
 
       .book-top {
-        font-size: 22px;
+        font-size: 0.22rem;
         font-family: Source Han Sans CN;
         font-weight: 400;
         color: rgba(51, 51, 51, 1);
-        padding: 13px 42px;
+        padding: 0.13rem 0.42rem;
         border-bottom: 1px solid rgba(225, 238, 236, 1);
 
         img {
           vertical-align: middle;
-          margin-right: 10px;
+          margin-right: 0.1rem;
         }
       }
     }
 
     .book-left {
       width: 100%;
-      margin-bottom: 30px;
+      margin-bottom: 0.3rem;
       ul {
         display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
+        justify-content: space-around;
+        margin-top: 0.2rem;
         li {
+          width: 23%;
           &.choosenow {
-            border: 1px solid rgba(173, 224, 213, 1);
           }
           .book-intro {
             cursor: pointer;
             display: block;
-            width: 175px;
-            height: 369px;
+            position: relative;
+            height: 3.69rem;
             text-align: center;
-            margin-top: 20px;
-            figure {
-              margin-top: 10px;
+            margin-top: 0.2rem;
+            figcaption {
+              position: absolute;
+              width: 100%;
+              right: 50%;
+              transform: translateX(50%);
+              bottom: 0.1rem;
+            }
+            img {
+              width: 100%;
             }
             h4 {
-              font-size: 16px;
+              font-size: 0.16rem;
               font-family: Microsoft YaHei;
               font-weight: 400;
               color: rgba(0, 0, 0, 1);
-              margin-top: 15px;
-              margin-bottom: 18px;
+              margin-top: 0.15rem;
+              margin-bottom: 0.18rem;
             }
             p {
-              font-size: 14px;
+              font-size: 0.14rem;
               font-family: Microsoft YaHei;
               font-weight: 400;
               color: rgba(153, 153, 153, 1);
@@ -445,33 +406,31 @@ body {
     }
     .book-right {
       width: 100%;
-      .book-top{
-          
+      .book-top {
       }
       .book-table {
         width: 100%;
-        padding: 10px 38px;
+        padding: 0.1rem 0.38rem;
         table {
           width: 100%;
-          margin-top: 10px;
+          margin-top: 0.1rem;
           th {
-            font-size: 14px;
+            font-size: 0.14rem;
             color: #999999;
             font-family: SourceHanSansCN-Regular;
             text-align: center;
           }
           tr {
             // height: 35px;
-            font-size: 14px;
+            font-size: 0.14rem;
             color: #999999;
             font-family: SourceHanSansCN-Regular;
             text-align: center;
-            line-height: 35px;
-            border-bottom: 1px solid rgba(238,238,238,1);
+            line-height: 0.35rem;
+            border-bottom: 1px solid rgba(238, 238, 238, 1);
             td {
               &:nth-child(2) {
                 a {
-                    
                   color: #2a8571;
                 }
               }
