--- a/src/styles/mobileNews.less
+++ b/src/styles/mobileNews.less
@@ -62,7 +62,7 @@
         background: rgba(255, 255, 255, 1);
         box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
         border-radius: 4px;
-        .tabLan{
+        .tabSide{
             display: none;
             position: fixed;
             z-index: 888;
