--- a/src/styles/mobileNewsDetail.less
+++ b/src/styles/mobileNewsDetail.less
@@ -60,7 +60,7 @@
         background: rgba(255, 255, 255, 1);
         box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
         border-radius: 4px;
-        .tabLan{
+        .tabSide{
             display: none;
             position: fixed;
             z-index: 888;
@@ -123,9 +123,9 @@
       .titleList {
         padding: 0.3rem;
         background: rgba(255, 255, 255, 1);
-        box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
         border-radius: 4px;
         .list_top {
+          text-align: center;
           font-size: 0.18rem;
           font-family: Source Han Sans CN;
           font-weight: 400;
