--- a/src/styles/mylibray.less
+++ b/src/styles/mylibray.less
@@ -223,8 +223,11 @@ body {
     .table {
       table {
         border-collapse: collapse;
+        display:block;
       }
-
+      .mobileBooks{
+        display:none;
+      }
       .detail_tb {
         width: 100%;
       }
@@ -313,7 +316,7 @@ body {
 
     .data-left {
       #bookNum{
-        width: 500px;
+        width:100%;
         height: 250px;
       }
       .data-top {
@@ -324,7 +327,7 @@ body {
     .data-left,
     .data-right {
       width: 48%;
-      height: 335px;
+      
       box-shadow: 0px 2px 9px 1px rgba(204, 204, 204, 0.5);
       background-color: #f7f9f9;
     }
@@ -352,7 +355,7 @@ body {
 
     .data-right {
       #timeNum{
-        width: 500px;
+        width: 100%;
         height: 250px;
       }
     }
@@ -397,12 +400,16 @@ body {
           .book-intro {
             cursor: pointer;
             display: block;
+            position: relative;
             width: 175px;
             height: 369px;
             text-align: center;
             margin-top: 20px;
-            figure{
-              margin-top:10px;
+            figcaption{
+              position: absolute;
+              right:50%;
+              transform: translateX(50%);
+              bottom:10px;
             }
             h4 {
               font-size: 16px;
