--- a/src/styles/mobileHelp.less
+++ b/src/styles/mobileHelp.less
@@ -30,11 +30,14 @@
         }
         
       }
-      .tabLan {
+      .tabSide {
         display: none;
         text-align: left;
         width: 30%;
       background-color: rgba(118,195,182);
+      min-width: 150px;
+      position: absolute;
+      top: 0.88rem;;
       }
       h1 {
         display: none;
@@ -135,7 +138,7 @@
           float: left;
           margin-right: 0.3rem;
           a {
-            font-size: 16px;
+            font-size: 0.16rem;
             font-family: Source Han Sans CN;
             font-weight: 400;
             color: rgba(42, 133, 113, 1);
