--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -447,8 +447,36 @@
         }
       }
       .news_foot {
+        .carousel-indicators{
+          bottom:unset;
+          top:-42px;
+          left:0;
+          margin-left: 0;
+           li {
+            display: inline-block;
+            width: 32px;
+            height: 32px;
+            text-indent: 0;
+            cursor: pointer;
+            border-radius: 0;
+            text-align: center;
+            line-height: 32px;
+            border:1px solid rgba(42,133,113,1);
+            color:rgba(42,133,113,1);
+            margin-top:0;
+            &:first-child{
+                   padding-bottom: 0;
+                   margin-bottom: 0;
+            }
+            &.active{
+             background-color:rgba(42,133,113,1);
+             color:#fff;
+            }
+        }
+        }
         img {
           height: 139px;
+          width:100%;
         }
       }
     }
