--- a/src/styles/help.less
+++ b/src/styles/help.less
@@ -12,7 +12,7 @@
       box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
       border-radius: 4px;
       padding-top: 20px;
-      .tabLan{
+      .tabSide{
         display: block!important;
       }
       .moveLogo{
@@ -44,16 +44,19 @@
       }
     }
     .subNav {
-      border-bottom: solid 1px #e5e3da;
+      
+        display:block;
+        border-bottom: solid 1px #e5e3da;
       padding: 13px;
       cursor: pointer;
-      font-size: 16px;
-      font-family: Source Han Sans CN;
-      font-weight: 400;
-      color: rgba(51, 51, 51, 1);
       background: url(../images/youjiantou.png) no-repeat;
       background-position: 6% 50%;
       text-indent: 2em;
+     a {  font-size: 16px;
+      font-family: Source Han Sans CN;
+      font-weight: 400;
+      color: rgba(51, 51, 51, 1);}
+     
     }
     .subNav:hover {
       color: rgba(42, 133, 113, 1);
