--- a/src/styles/mobileHelpDetail.less
+++ b/src/styles/mobileHelpDetail.less
@@ -28,13 +28,15 @@
         .pcLogo {
           display: none;
         }
-        
       }
       .tabSide {
         display: none;
         text-align: left;
         width: 30%;
-      background-color: rgba(118,195,182);
+        background-color: rgba(118, 195, 182);
+        min-width: 150px;
+        position: absolute;
+        top: 0.88rem;
       }
       h1 {
         display: none;
@@ -57,15 +59,20 @@
     }
     .subNav {
       border-bottom: solid 1px #e5e3da;
-      padding: 0.13rem;
       cursor: pointer;
-      font-size: 0.16rem;
-      font-family: Source Han Sans CN;
-      font-weight: 400;
-      color: rgba(51, 51, 51, 1);
       background: url(../images/youjiantou.png) no-repeat;
+      background-size: inherit;
       background-position: 6% 50%;
       text-indent: 2em;
+       
+      a {
+        display: block;
+       padding: 0.13rem;
+        font-size: 0.16rem;
+        font-family: Source Han Sans CN;
+        font-weight: 400;
+        color: rgba(51, 51, 51, 1);
+      }
     }
     .subNav:hover {
       color: rgba(42, 133, 113, 1);
@@ -80,20 +87,40 @@
       color: #fff;
     }
     .currentDt {
-      background-image: url(../images/jiantouxia.png);
+      background-image: url(../images/jiantouxia.png)!important;
+      background-repeat: no-repeat;
+      background-position: 1% 50%;
     }
     .navContent {
       display: none;
       padding: 0.05rem;
       border-bottom: solid 1px #e5e3da;
+      li {
+        ol {
+          display: none;
+        }
+      }
     }
-    .navContent li a {
+   
+    .navContent > li > a {
       display: block;
       padding: 0.15rem;
       text-align: left;
-      padding-left: 0.4rem;
+      padding-left: 0.35rem;
       font-size: 0.14rem;
       color: #333;
+      background: url(../images/youjiantou.png) no-repeat;
+      background-position: 1% 50%;
+    }
+
+    ol a {
+      display: block;
+      padding: 0.15rem;
+      text-align: left;
+      padding-left: 0.35rem;
+      font-size: 0.14rem;
+      color: #333;
+      text-indent: 1em;
     }
     .navContent li {
       &.currentDd {
@@ -106,7 +133,5 @@
   .mainContent {
     width: 100%;
     padding-top: 0.88rem;
-   
   }
 }
-  
